--- a/master.css
+++ b/master.css
@@ -23,21 +23,21 @@ body
 .map-parent
 {
   height: 905px;
-  width: 1100px;
+  width: 1000px;
   padding-right: 5px;
-  overflow-y: auto;
-  overflow-x: auto;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 .map
 {
   /*flex: 60%; 1270 */
   /*Sets the height to be 98 viewport units so that it would fill the entire screen */
-height: 100%;
-width: 100%;
+height: 905px;
+width: 1000px;
 display: block;
-background-image: url("img/1200+px.png");
+background-image: url("img/1200++px.png");
 background-repeat: no-repeat;
-background-size:  1100px 1070px;
+background-size:  1000px 950px;
 object-fit: contain;
 position: relative;
 transition: 1s;
@@ -93,8 +93,8 @@ transition: 1s;
 .destination
 {
 position: absolute;
-width: 30px;
-height: 40px;
+width: 35px;
+height: 35px;
 transition: 1s;
 }
 
