--- a/master.css
+++ b/master.css
@@ -27,6 +27,8 @@ body
   padding-right: 5px;
   overflow-y: hidden;
   overflow-x: hidden;
+  border: 2px solid gray;
+ border-radius: 5px;
 }
 .map
 {
@@ -89,6 +91,7 @@ transition: 1s;
   margin: auto; /*optional centering of image*/
   cursor: move;
   position: absolute;
+  border-radius: 5px;
 }
 .destination
 {
@@ -142,7 +145,7 @@ transition: 1s;
   }
   #main-img
   {
-    width: 500px !important;
+    width: 350px !important;
   }
 }
 @media only screen and (max-width: 1325px) { /*neveikia kazkodel*/
@@ -219,5 +222,9 @@ transition: 1s;
   #imgheader
   {
     top:calc(30% + 150px);
+  }
+  #main-img
+  {
+    width: 400px !important;
   }
 }
