--- a/master.css
+++ b/master.css
@@ -76,7 +76,14 @@ transition: 1s;
   100% {color:black;font-size: 1.5rem;max-width: 500px;}
 }
 
-
+@keyframes imgPlacedOut {
+50% {width:60px;height: 60px}
+100%{width: 35px;height: 35px;}
+}
+@keyframes imgPlacedZoomed {
+50% {width:65px;height: 65px}
+100%{width: 50px;height: 50px;}
+}
 .church-img
 {
 
