--- a/master.css
+++ b/master.css
@@ -81,16 +81,19 @@ transition: 1s;
   display: block;
   position: absolute;
   left:65%;
-  top:23%;
+  top:25%;
   max-width: 500px;
   font-size: 1.5rem;
 
 }
 @keyframes incorect {
-  50% {color:red;font-size: 1.75rem;max-width: 570px;}
-  100% {color:black;font-size: 1.5rem;max-width: 500px;}
+  50% {color:red;font-size: 1.5rem;max-width: 570px;}
+  100% {color:black;font-size: 1.3rem;max-width: 500px;}
 }
-
+@keyframes incorect-small {
+  50% {color:red;font-size: 1.1rem;max-width: 570px;}
+  100% {color:black;font-size: 1rem;max-width: 500px;}
+}
 @keyframes imgPlacedOut {
 50% {width:60px;height: 60px}
 100%{width: 35px;height: 35px;}
@@ -126,9 +129,30 @@ transition: 1s;
   height: 500px;
   z-index: 0;
 }
+#failed
+{
+  visibility: visible;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  background: white;
+  border: 2px solid black;
+  border-radius: 5px;
+  opacity: 0.9;
+  z-index: 7;
+  transition: 1s;
+  width: 500px;
+  height: 500px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  cursor: pointer;
 
-
-
+}
+#failed h2
+{
+  font-size: 1.3rem;
+}
 
 .destination, .destination-arrow
 {
@@ -162,7 +186,7 @@ transition: 1s;
     left: 70%;
 
   }
-  #hide
+  #hide, #failed
   {
     width: 400px;
     height: 400px;
@@ -176,18 +200,25 @@ transition: 1s;
     width: 300px;
     left: 75%;
   }
-  #hide
+  #hide, #failed
   {
     width: 300px;
     height: 300px;
     left:75%;
+  }
+  #failed h2
+  {
+    font-size: 1.3rem;
   }
   #imgheader, #findText
   {
     left: 75%;
     font-size: 1.5rem;
   }
-
+  #findText
+  {
+    top: 22%;
+  }
   #imgheader
   {
     top:calc(30% + 310px);
@@ -204,7 +235,7 @@ transition: 1s;
     width:250px;
     left: 80%;
   }
-  #hide
+  #hide, #failed
   {
     width: 250px;
     height: 250px;
@@ -213,7 +244,7 @@ transition: 1s;
   #imgheader, #findText
   {
     left: 80%;
-    top:14%;
+    width: 250px;
   }
   #imgheader
   {
@@ -231,20 +262,25 @@ transition: 1s;
     right: 2px;
     top:35%;
   }
-  #hide
+  #hide, #failed
   {
     width: 220px;
     height: 220px;
     left:auto;
     right: 2px;
   }
+  #failed h2
+  {
+    font-size: 1rem;
+  }
   #imgheader, #findText
   {
-    top: 22%;
+    top: 28%;
     left:auto;
     right: 2px;
     width:220px;
     font-size: 1.5rem;
+
   }
   #imgheader
   {
@@ -260,28 +296,10 @@ transition: 1s;
 }
 @media only screen and (max-width: 1172px) { /*neveikia kazkodel*/
 
-  .church-img
+  #hide, #failed
   {
-    right: 0px;
-
+    right: 10px;
   }
-  #hide
-  {
-    right: 0px;
-  }
-  #imgheader, #findText
-  {
-    right: 0px;
-
-  }
-  #findText
-  {
-    top:10%;
-  }
-
-}
-@media only screen and (max-width: 1028px) {
-
   .map-parent
   {
     width: 760px;
@@ -291,6 +309,35 @@ transition: 1s;
   {
     left: -240px;
   }
+  .church-img
+  {
+    width: 220px;
+    right:10px;
+  }
+  #imgheader
+  {
+      width: 220px;
+    top:calc(35% + 240px);
+      right:10px;
+  }
+  #findText
+  {
+      width: 220px;
+    top: 22%;
+      right:10px;
+  }
+  #main-img
+  {
+    width: 500px !important;
+  }
+  #zoom-icon
+  {
+    left:710px;
+  }
+}
+}
+@media only screen and (max-width: 984px) {
+
   .church-img
   {
     width: 220px;
@@ -305,17 +352,10 @@ transition: 1s;
   #findText
   {
       width: 220px;
-    top: 15%;
+    top: 20%;
       right:0px;
   }
-  #main-img
-  {
-    width: 500px !important;
-  }
-  #zoom-icon
-  {
-    left:710px;
-  }
+
 }
 @media only screen and (max-width: 922px) {
 
@@ -338,7 +378,7 @@ transition: 1s;
     top:20px;
     left:20px;
   }
-  #hide
+  #hide, #failed
   {
     right: auto;
     top:20px;
